renamed:    Untitled.ipynb -> Length-feature.ipynb 	modified:   experiments/diabetes.py 	new file:   mimic-length.ipynb 	modified:   scripts/run_diabetes-512.sh 	modified:   scripts/run_diabetes_bigbird.sh 	modified:   scripts/run_diabetes_clinical_longformer.sh

--- a/Length-feature.ipynb
+++ b/Length-feature.ipynb
@@ -1351,7 +1351,7 @@
    "source": [
     "def add_length_feature(examples):\n",
     "\n",
-    "    length=examples['length']:\n",
+    "    length=examples['length']\n",
     "    if length <= quartiles[0]:\n",
     "        length_feature=1\n",
     "    elif length <= quartiles[1]:\n",
@@ -3708,59 +3708,6 @@
     "if \"label\" in first and first[\"label\"] is not None:\n",
     "    print('yes')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "2f203e5f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from scipy.special import expit\n",
-    "\n",
-    "predictions = np.array([0.13660, 0.00966, 0.06305, 0.03687, -0.06573, -0.15967, 0.16394, -0.07227, 0.18677, -0.06982])\n",
-    "predictions_sigmoid = expit(predictions)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "678a5fa3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictions_labels = (predictions_sigmoid > 0.5).astype('int32')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "94d29849",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 1, 1, 1, 0, 0, 1, 0, 1, 0], dtype=int32)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predictions_labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff1ca3ce",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
